using Api.Grpc.AddressParser;
using Api.Models.Normalization;
using Api.Services.AddressParser;

namespace Api.Services.Normalization;

/// <summary>
/// –°–µ—Ä–≤–∏—Å –ø–∞—Ä—Å–∏–Ω–≥–∞ –∏ –Ω–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏–∏ –∞–¥—Ä–µ—Å–æ–≤ —Å –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ–º gRPC Address Parser (libpostal)
/// </summary>
public class AddressNormalizer : IAddressNormalizer
{
    private readonly IAddressParserClient _addressParserClient;
    private readonly ILogger<AddressNormalizer> _logger;

    public AddressNormalizer(
        IAddressParserClient addressParserClient,
        ILogger<AddressNormalizer> logger)
    {
        _addressParserClient = addressParserClient;
        _logger = logger;
    }

    /// <summary>
    /// –ü–∞—Ä—Å–∏—Ç –∏ –Ω–æ—Ä–º–∞–ª–∏–∑—É–µ—Ç –∞–¥—Ä–µ—Å —á–µ—Ä–µ–∑ Address Parser (libpostal)
    /// –í–æ–∑–≤—Ä–∞—â–∞–µ—Ç –∏ —Å—Ç—Ä—É–∫—Ç—É—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–µ –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã, –∏ –Ω–æ—Ä–º–∞–ª–∏–∑–æ–≤–∞–Ω–Ω—É—é —Å—Ç—Ä–æ–∫—É
    /// </summary>
    public async Task<NormalizedAddressResult> NormalizeAndParseAsync(string rawAddress)
    {
        if (string.IsNullOrWhiteSpace(rawAddress))
        {
            return new NormalizedAddressResult
            {
                Success = false,
                NormalizedAddress = string.Empty,
                ErrorMessage = "–ê–¥—Ä–µ—Å –ø—É—Å—Ç–æ–π"
            };
        }

        try
        {
            _logger.LogDebug("–ü–∞—Ä—Å–∏–Ω–≥ –∏ –Ω–æ—Ä–º–∞–ª–∏–∑–∞—Ü–∏—è –∞–¥—Ä–µ—Å–∞: {RawAddress}", rawAddress);

            var requestId = Guid.NewGuid().ToString();

            // –ü–∞—Ä–∞–ª–ª–µ–ª—å–Ω–æ –≤—ã–∑—ã–≤–∞–µ–º ParseAddress –∏ NormalizeAddress
            var parseTask = _addressParserClient.ParseAddressAsync(
                address: rawAddress,
                country: "RU",
                language: "ru",
                requestId: requestId,
                cancellationToken: default);

            var normalizeTask = _addressParserClient.NormalizeAddressAsync(
                address: rawAddress,
                country: "RU",
                language: "ru",
                transliterate: false,
                lowercase: false,
                removePunctuation: false,
                requestId: requestId,
                cancellationToken: default);

            // –ñ–¥–µ–º –æ–±–∞ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞
            await Task.WhenAll(parseTask, normalizeTask);

            var parseResponse = await parseTask;
            var normalizeResponse = await normalizeTask;

            // –ü—Ä–æ–≤–µ—Ä—è–µ–º —É—Å–ø–µ—à–Ω–æ—Å—Ç—å –æ–±–æ–∏—Ö –∑–∞–ø—Ä–æ—Å–æ–≤
            if (parseResponse.Status?.Code == Api.Grpc.AddressParser.StatusCode.Ok &&
                normalizeResponse.Status?.Code == Api.Grpc.AddressParser.StatusCode.Ok)
            {
                _logger.LogInformation("‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê");
                _logger.LogInformation("üìã –†–ï–ó–£–õ–¨–¢–ê–¢ –û–¢ ADDRESS PARSER (libpostal)");
                _logger.LogInformation("‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ");
                _logger.LogInformation("üî§ –û—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—ã–π:     '{Original}'", rawAddress);
                _logger.LogInformation("‚ú® –ù–æ—Ä–º–∞–ª–∏–∑–æ–≤–∞–Ω–Ω—ã–π:  '{Normalized}'", normalizeResponse.NormalizedAddress);
                _logger.LogInformation("üì¶ –ê–ª—å—Ç–µ—Ä–Ω–∞—Ç–∏–≤—ã:     {Count}", normalizeResponse.Alternatives?.Count ?? 0);

                if (normalizeResponse.Alternatives?.Count > 0)
                {
                    for (int i = 0; i < Math.Min(3, normalizeResponse.Alternatives.Count); i++)
                    {
                        _logger.LogInformation("   {Index}. '{Alternative}'", i + 1, normalizeResponse.Alternatives[i]);
                    }
                }

                _logger.LogInformation("üèóÔ∏è  –ö–æ–º–ø–æ–Ω–µ–Ω—Ç—ã:");
                if (parseResponse.Components != null)
                {
                    var c = parseResponse.Components;
                    if (!string.IsNullOrEmpty(c.Country)) _logger.LogInformation("   ‚Ä¢ Country:        '{Value}'", c.Country);
                    if (!string.IsNullOrEmpty(c.State)) _logger.LogInformation("   ‚Ä¢ State:          '{Value}'", c.State);
                    if (!string.IsNullOrEmpty(c.City)) _logger.LogInformation("   ‚Ä¢ City:           '{Value}'", c.City);
                    if (!string.IsNullOrEmpty(c.CityDistrict)) _logger.LogInformation("   ‚Ä¢ CityDistrict:   '{Value}'", c.CityDistrict);
                    if (!string.IsNullOrEmpty(c.Suburb)) _logger.LogInformation("   ‚Ä¢ Suburb:         '{Value}'", c.Suburb);
                    if (!string.IsNullOrEmpty(c.Road)) _logger.LogInformation("   ‚Ä¢ Road:           '{Value}'", c.Road);
                    if (!string.IsNullOrEmpty(c.HouseNumber)) _logger.LogInformation("   ‚Ä¢ HouseNumber:    '{Value}'", c.HouseNumber);
                    if (!string.IsNullOrEmpty(c.Unit)) _logger.LogInformation("   ‚Ä¢ Unit:           '{Value}'", c.Unit);
                    if (!string.IsNullOrEmpty(c.Postcode)) _logger.LogInformation("   ‚Ä¢ Postcode:       '{Value}'", c.Postcode);
                }
                else
                {
                    _logger.LogWarning("   ‚ö†Ô∏è –ö–æ–º–ø–æ–Ω–µ–Ω—Ç—ã –æ—Ç—Å—É—Ç—Å—Ç–≤—É—é—Ç!");
                }
                _logger.LogInformation("‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê‚ïê");

                return new NormalizedAddressResult
                {
                    Success = true,
                    NormalizedAddress = normalizeResponse.NormalizedAddress,
                    Components = parseResponse.Components
                };
            }
            else
            {
                _logger.LogWarning(
                    "–û—à–∏–±–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∞–¥—Ä–µ—Å–∞. ParseStatus: {ParseStatus}, NormalizeStatus: {NormalizeStatus}",
                    parseResponse.Status?.Code, normalizeResponse.Status?.Code);

                // –í–æ–∑–≤—Ä–∞—â–∞–µ–º —Ö–æ—Ç—è –±—ã —Ç–æ, —á—Ç–æ –ø–æ–ª—É—á–∏–ª–æ—Å—å
                return new NormalizedAddressResult
                {
                    Success = false,
                    NormalizedAddress = normalizeResponse.NormalizedAddress ?? rawAddress,
                    Components = parseResponse.Components,
                    ErrorMessage = parseResponse.Status?.Message ?? normalizeResponse.Status?.Message
                };
            }
        }
        catch (OperationCanceledException)
        {
            _logger.LogWarning("–ó–∞–ø—Ä–æ—Å –Ω–∞ –æ–±—Ä–∞–±–æ—Ç–∫—É –∞–¥—Ä–µ—Å–∞ –±—ã–ª –æ—Ç–º–µ–Ω–µ–Ω");
            return new NormalizedAddressResult
            {
                Success = false,
                NormalizedAddress = rawAddress,
                ErrorMessage = "–ó–∞–ø—Ä–æ—Å –æ—Ç–º–µ–Ω–µ–Ω"
            };
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "–ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ –∞–¥—Ä–µ—Å–∞: {Address}", rawAddress);

            // –í —Å–ª—É—á–∞–µ –ª—é–±–æ–π –æ—à–∏–±–∫–∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –∏—Å—Ö–æ–¥–Ω—ã–π –∞–¥—Ä–µ—Å
            return new NormalizedAddressResult
            {
                Success = false,
                NormalizedAddress = rawAddress,
                ErrorMessage = ex.Message
            };
        }
    }

    /// <summary>
    /// –ü—Ä–æ–≤–µ—Ä—è–µ—Ç –≤–∞–ª–∏–¥–Ω–æ—Å—Ç—å –∞–¥—Ä–µ—Å–∞
    /// </summary>
    public bool IsValid(string address)
    {
        // –ü—Ä–∏–Ω–∏–º–∞–µ–º –∞–±—Å–æ–ª—é—Ç–Ω–æ –ª—é–±—É—é –Ω–µ-null —Å—Ç—Ä–æ–∫—É
        // Address Parser –∏ Python —Å–µ—Ä–≤–∏—Å —Å–∞–º–∏ —Ä–µ—à–∞—Ç, —á—Ç–æ —Å –Ω–µ–π –¥–µ–ª–∞—Ç—å
        if (address == null)
        {
            return false;
        }

        return true;
    }
}
